--- a/Amber Lands.html
+++ b/Amber Lands.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Amber Land</title>
-    <link rel="stylesheet" href="/master.css">
+    <link rel="stylesheet" href="./master.css">
   </head>
   <body style="background-color: #a37627;">
     <div class="Amber_land">
