--- a/Chorus Forest.html
+++ b/Chorus Forest.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Chorus Forest</title>
-    <link rel="stylesheet" href="/master.css">
+    <link rel="stylesheet" href="./master.css">
   </head>
   <body style="background-color: #36104a;">
   <div class="Chorus_Forest">
