--- a/Mushroom Forest.html
+++ b/Mushroom Forest.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mushroom Forest</title>
-    <link rel="stylesheet" href="./master.css">
+    <link rel="stylesheet" href="/master.css">
   </head>
   <body style="background-color: #333ea1;">
     <div class="Mushroom_Forest">
