--- a/Mushroom Forest.html
+++ b/Mushroom Forest.html
@@ -7,7 +7,7 @@
   </head>
   <body style="background-color: #333ea1;">
     <div class="Mushroom_Forest">
-      <img style="width: 700px; border-radius: 30px;" src="./images/Mushroom_Forest2.png" alt="an image of a giant mushroom">
+      <img style="width: 700px; border-radius: 30px;" src="./images/Mushroom_Forest.png" alt="an image of a giant mushroom">
     <p>The ground of the Foggy Mushroomland is made of end moss and end mycelium and is coved in creeping moss, umbrella moss, and blue vines. Small lakes and ponds can also be found that contain bubble coral, end lily, and light blue charnia. The ponds can have end fish and cubozoa. Underground, all cave types can spawn. Ender ore, thallasium, flavolite, and smaragdant crystals all generate normally. Occasionally end slime can spawn with a blue color and end moss on their heads</p>
     <a href="./index.html">Go Back</a>
   </div>
