--- a/Amber Lands.html
+++ b/Amber Lands.html
@@ -7,7 +7,7 @@
   </head>
   <body style="background-color: #a37627;">
     <div class="Amber_land">
-    <img style="width: 700px; border-radius: 30px;" src="./images/Amber Lands2.png" alt="">
+    <img style="width: 700px; border-radius: 30px;" src="./Images/Amber Lands2.png" alt="">
     <p>Amber land is a mysterious orange biome, with tall, annular Helix trees,
        and an assortment of illuminant high leaf flora, including Lanceleaf, Glowing Pillar, and Amber root.</p>
        <a href="./index.html">Go Back</a>
