--- a/Chorus Forest.html
+++ b/Chorus Forest.html
@@ -7,7 +7,7 @@
   </head>
   <body style="background-color: #36104a;">
   <div class="Chorus_Forest">
-    <img style="width: 700px; border-radius: 30px;" src="./images/Chorus Forest2.png" alt="A picture of a house found in these forests rarely">
+    <img style="width: 700px; border-radius: 30px;" src="./Images/Chorus Forest2.png" alt="A picture of a house found in these forests rarely">
     <p>The Chorus Forest is a mysterious, mauve, spooky biome, with purple trees and where chorus fruit grow a lot.
 The Chorus Forest contains purple trees and chorus fruit, chorus fruit has changed textures.
 Enderman spawns are increased within this biome and shadowberries can be found here.</p>
