--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   <div class="row">
     <div class="column">
     <div class="blurb2">
-      <img style="width: 700px; border-radius: 30px;" src="./images/Mushroom_Forest.png" alt="a picture of a mushroom forest">
+      <img style="width: 700px; border-radius: 30px;" src="./Images/Mushroom_Forest.png" alt="a picture of a mushroom forest">
       <div class="space">
       </div>
       <a href="./Mushroom Forest.html">Visit the peaceful Mushroom Forests</a>
       <div class="space">
       </div>
-      <img style="width: 700px; border-radius: 30px;" src="./images/Amber_land.png" alt="a picture of the amber lands">
+      <img style="width: 700px; border-radius: 30px;" src="./Images/Amber_land.png" alt="a picture of the amber lands">
       <div class="space">
       </div>
       <a href="./Amber Lands.html">Take in the truly towering presence of the Amber Lands!</a>
       <div class="space">
       </div>
-      <img style="width: 705px; border-radius: 30px;" src="./images/Chorus_Forest.png" alt="a picture of The spooky chorus forests">
+      <img style="width: 705px; border-radius: 30px;" src="./Images/Chorus_Forest.png" alt="a picture of The spooky chorus forests">
       <div class="space">
       </div>
       <a href="./Chorus Forest.html">Be haunted by the dark majesty of the Chorus Forest</a>
