--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a href="./Amber Lands.html">Take in the truly towering presence of the Amber Lands!</a>
       <div class="space">
       </div>
-      <img style="width: 705px; border-radius: 30px;" src="./Images/Chorus_Forest.png" alt="a picture of The spooky chorus forests">
+      <img style="width: 705px; border-radius: 30px;" src="./Images/Chorus_forest.png" alt="a picture of The spooky chorus forests">
       <div class="space">
       </div>
       <a href="./Chorus Forest.html">Be haunted by the dark majesty of the Chorus Forest</a>
